[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spnkr"
version = "0.10.0"
description = "Unofficial Python SDK for the Halo Infinite web API."
readme = "README.md"
authors = [{ name = "Andy Curtis" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["halo", "infinite", "api"]
dependencies = [
    "aiohttp>=3.9,<4.0",
    "aiolimiter~=1.0",
    "pydantic>=2.8,<3.0",
    "bitstring~=4.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
cache = ["aiohttp-client-cache>=0.10"]

[project.urls]
Homepage = "https://github.com/acurtis166/SPNKr"
Documentation = "https://acurtis166.github.io/SPNKr/"

[tool.setuptools.packages.find]
include = ["spnkr*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.tox]
requires = ["tox>=4.28.1"]
env_list = ["3.11", "3.12", "3.13", "lint"]

[tool.tox.env_run_base]
deps = [
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "python-dotenv==1.1.1",
    "aiohttp-client-cache==0.13.0",
]
description = "Run test under {base_python}"
commands = [["python", "-m", "pytest", "--color=yes"]]

[tool.tox.env.lint]
description = "Lint source code"
deps = ["ruff"]
commands = [["ruff", "check", "."], ["ruff", "format", "."]]

[tool.uv]
dev-dependencies = [
    "aiohttp-client-cache==0.13.0",
    "pytest==8.4.1",
    "pytest-asyncio>=1.1.0",
    "coverage==7.10.0",
    "mkdocs==1.6.1",
    "mkdocstrings[python]==0.30.0",
    "mkdocs-material==9.6.15",
    "python-dotenv==1.1.1",
    "ruff==0.12.5",
]
