[metadata]
name = halo-infinite-api
version = attr: halo_infinite_api.__version__
author = Andy Curtis
url = https://github.com/acurtis166/halo-infinite-api
description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown
keywords = halo, infinite, api
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
# install_requires =
#     pandas == 1.4.1
#     PyYAML >= 6.0
#     typer

# [options.entry_points]
# console_scripts = 
#     my-example-utility = example.example_module:main

# [options.extras_require]
# notebook = jupyter>=1.0.0, matplotlib
# dev = 
#     black==22.1.0
#     flake8==4.0.1

# [options.package_data]
# example = data/schema.json, *.txt
# * = README.md